# chatAssistant

./: .gitignore  README.md  config.py  pyproject.toml  util.py
agents/coordinatoragent/: main.py
agents/coordinatoragent/models/: coordinator_agent_request.py
agents/memory/: agent_memory.py
agents/synthesizeragent/: instructions.md  main.py
agents/synthesizeragent/models/: synthesizer_agent_request.py
frontend/: chatbot.py
rag/: rag_service.py
